[package]
name = "ckb-lib-secp256k1"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8" }

[build-dependencies]
blake2b-rs = "0.1.5"