[package]
name = "ckb-cheque-script"
version = "0.1.0"
authors = ["Dylan <duanyytop@gmail.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
# For simulator support
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8" }
blake2b-ref = "0.2.0"